tests/ui/internal/internal-unstable-thread-local.stderr
error[E0658]: use of unstable library feature `function`
  --> $DIR/internal-unstable-thread-local.rs:9:32
   |
LL | thread_local!(static BAR: () = internal_unstable::unstable());
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(function)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
